# sql-csv-minio-spark

./: .gitignore  404.html  README.md  bikestores.sql  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
delta/: index.html
docs/: delta.md  iceberg.md  index.md  spark.md
notebooks/: 01_extract_to_landing.ipynb  02_landing_to_bronze.ipynb  03_bronze_dml.ipynb  delta_lake.ipynb  iceberg.ipynb  pipeline_delta_lake.ipynb  pipeline_iceberg.ipynb
projeto_ed_satc/: spark_session.py
raw/: cargos.csv  departamentos.csv  folha_pagamento.csv  funcionarios.csv
search/: search_index.json
spark/: index.html
warehouse/delta/cargos/: .part-00000-2e95e7dc-5367-4d7f-a049-c2bb2f4f1ebe-c000.snappy.parquet.crc  .part-00000-5c9aaea5-7858-4aef-a387-54f605fc9e72-c000.snappy.parquet.crc  .part-00000-764b2987-b1c5-4481-87b1-2b69f8133d8b-c000.snappy.parquet.crc  .part-00000-b0d4e7ea-662c-4ff3-99fe-82a660ec597c-c000.snappy.parquet.crc  .part-00000-b39fc45b-d7d9-4225-b4d6-556e2fe0334b-c000.snappy.parquet.crc  .part-00000-cc0cbcb7-618d-4dfb-b35a-097c7e5c41db-c000.snappy.parquet.crc  .part-00000-f936349f-3d53-4d56-832b-9f5340ba5859-c000.snappy.parquet.crc  part-00000-2e95e7dc-5367-4d7f-a049-c2bb2f4f1ebe-c000.snappy.parquet  part-00000-5c9aaea5-7858-4aef-a387-54f605fc9e72-c000.snappy.parquet  part-00000-764b2987-b1c5-4481-87b1-2b69f8133d8b-c000.snappy.parquet  part-00000-b0d4e7ea-662c-4ff3-99fe-82a660ec597c-c000.snappy.parquet  part-00000-b39fc45b-d7d9-4225-b4d6-556e2fe0334b-c000.snappy.parquet  part-00000-cc0cbcb7-618d-4dfb-b35a-097c7e5c41db-c000.snappy.parquet  (+1 more)
(+135 files in other folders)
