[project]
name = "projeto-ed-satc"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.0",
    "delta-spark==3.1.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "blue>=0.9.1",
    "pytest>=8.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.23",
    "pymdown-extensions>=10.8.1",
    "mkdocstrings>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
